--- a/style.css
+++ b/style.css
@@ -3,3 +3,20 @@
     padding: 0px;
     box-sizing: border-box;
 }
+
+a {
+    text-decoration: none;
+}
+
+body {
+    font-family: sans-serif;
+}
+
+header {
+    background: url("/landing.jpg") no-repeat center/cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    height: 700px;
+}
