styled classes hover,happy-hour and party-time

--- a/style.css
+++ b/style.css
@@ -49,3 +49,17 @@ em {
     display: flex;
     flex-direction: column;
 }
+
+.column-2 {
+    width: 25%;
+    height: 250px;
+}
+
+.hpt {
+    height: 50%;
+}
+
+.column {
+    display: flex;
+    flex-direction: column;
+}
