styled class dinner,id fast-food and id images

--- a/style.css
+++ b/style.css
@@ -95,3 +95,28 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-style: italic;
 }
+
+.dinner {
+    background: url(/dinner.jpg) no-repeat center;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    background-size: cover;
+    align-items: center;
+    font-size: 30px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-style: italic;
+}
+
+#fast-food {
+    display: flex;
+    width: 70%;
+    margin: 10% auto;
+}
+
+#images {
+    flex-direction: column;
+    display: flex;
+    border: 10px solid #fff;
+    box-shadow: 2px 2px 20px gray;
+}
