--- a/style.css
+++ b/style.css
@@ -120,3 +120,31 @@ p {
     border: 10px solid #fff;
     box-shadow: 2px 2px 20px gray;
 }
+
+#description-1 {
+    margin: 60px;
+    font-size: 18px;
+    margin-left: 5em;
+}
+
+h3 {
+    text-transform: capitalize;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    display: block;
+    font-weight: 900;
+    font-size: 38px;
+    margin: 30px 0;
+}
+
+.viewing-1 {
+    color: #f15a29;
+    border: 1px solid #f15a29;
+    font-weight: 700;
+    padding: 1em 1em;
+    border-radius: 5px;
+    margin-top: 1em;
+    text-transform: uppercase;
+    width: 200px;
+    position: absolute;
+    display: block;
+}
