--- a/style.css
+++ b/style.css
@@ -223,3 +223,28 @@ viewing-1 .fa {
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size: 20px;
 }
+
+ul {
+    display: block;
+    list-style-type: disc;
+}
+
+.food-tab {
+    display: flex;
+    width: 80%;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    padding-right: 10px;
+}
+
+.reviews {
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    height: 250px;
+    box-shadow: 2px 2px 20px gray;
+    width: 70%;
+    padding-left: 20%;
+    margin-left: 15%;
+}
