styled classes customers,customer-pics,h4,menu and subscribe

--- a/style.css
+++ b/style.css
@@ -248,3 +248,38 @@ ul {
     padding-left: 20%;
     margin-left: 15%;
 }
+
+.customers {
+    display: flex;
+    justify-content: center;
+}
+
+. .customer-pics {
+    align-items: center;
+    justify-content: space-between;
+    display: flex;
+}
+
+h4 {
+    text-align: center;
+    font-weight: 700;
+    text-transform: capitalize;
+}
+
+.menu {
+    text-align: center;
+    display: block;
+    padding-right: 10px;
+}
+
+.subscribe {
+    background: url(/subscribe.jpg) no-repeat center;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    height: 400px;
+    justify-content: center;
+    color: white;
+    font-size: 30px;
+    font-weight: 900;
+}
