--- a/style.css
+++ b/style.css
@@ -249,14 +249,14 @@ ul {
     display: flex;
     height: 250px;
     box-shadow: 2px 2px 20px gray;
-    width: 70%;
-    padding-left: 20%;
-    margin-left: 15%;
+    width: 60%;
+    padding-left: 15%;
+    margin-left: 10%;
+    margin-top: 15px;
 }
 
 .customers {
-    display: flex;
-    justify-content: center;
+    display: block
 }
 
 . .customer-pics {
@@ -274,7 +274,7 @@ h4 {
 .menu {
     text-align: center;
     display: block;
-    padding-right: 10px;
+    padding-right: 15px;
 }
 
 .subscribe {
@@ -298,4 +298,10 @@ footer {
     text-align: center;
     align-items: center;
     height: 500px;
+}
+
+.menu-logo {
+    align-items: center;
+    display: flex;
+    justify-content: center;
 }
